# FinMesh-Real-Time-Network-of-Networks-Financial-Ledger-Simulation

finmesh/: .env  README.md  docker-compose.yml  main.py  pyproject.toml
finmesh/core/clickhouse_writer/: main.py
finmesh/core/ledger_writer/: main.py
finmesh/core/reconciliation_service/: main.py
finmesh/core/validator_service/: main.py
finmesh/networks/bank_producer/: main.py
finmesh/networks/custody_network/: main.py
finmesh/networks/exchange_network/: main.py
finmesh/networks/settlement_network/: main.py
finmesh/services/bank_producer/: main.py
finmesh/services/clickhouse_writer/: main.py
finmesh/services/custody_network/: main.py
finmesh/services/exchange_network/: main.py
finmesh/services/ledger_verifier/: main.py
finmesh/services/reconciliation_service/: main.py
finmesh/services/settlement_network/: main.py
finmesh/services/validator_service/: main.py
finmesh/shared/: config.py  hashing.py  kafka.py
finmesh/shared/schemas/: custody_event.py  settlement_event.py  trade_execution.py  trade_order.py
finmesh/sql/: init.sql
